--- a/style.css
+++ b/style.css
@@ -154,15 +154,16 @@ nav {
 
 .copyright {
     position: fixed;
-    bottom: 25px;
+    bottom: 20px;
     left: 0;
     width: 100%;
     text-align: center;
-    font-size: 10px;
-    color: white;
-    opacity: 0.1;
+    font-size: 8px;
+    color: #fab322;
+    opacity: 1;
     z-index: 1000;
-    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
 .container {
@@ -186,3 +187,5 @@ nav {
     font-weight: 400;
     z-index: 10;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
