--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ nav {
     padding: 10px 20px;
     font-size: 16px;
     background-color: transparent;
-    border: 0.0px solid #fab322;
+    border: 0.8px solid #fab322;
     cursor: pointer;
     white-space: nowrap;
     border-radius: 0px;
@@ -124,12 +124,16 @@ nav {
 
 @media (max-width: 480px) {
     .container {
-        padding-bottom: 40px;
-        flex-direction: column;
+        padding-bottom: 20px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     #send-enquiry, #work-examples, #services {
-        margin: 5px 0;
+        margin-bottom: 30px;
+        font-size: 10px;
+        padding: 10px 15px;
     }
 }
 
